syntax = "proto3";

package grpcCommon;
option java_package = "com.wanfang.grpcCommon";


enum ErrorCode {
     PASS_ERROR = 0; // 密码错误
     NO_REGIST = 1; // 用户还未注册
     USER_EXIST = 2; // 用户已经注册
     NEED_FIELD = 3; // 参数不完整
     UNKNOWN_FILELD_TYPE = 4; // 参数类型错误

     RESULT_NULL = 5; // 数据查询结果为空

     COMMON_ERROR = 6; // 异常错误

     USER_IS_LOGIN = 7; // 用户已登录

     IAP_PRICE_ERROR = 8; // 内购支付价格错误

     IAP_CREATEORDER_ERROR = 9; // 内购创建万方订单发生错误

     THIRD_PARTY_NOT_BINd = 10; // 第三方登录账号未绑定

     TRADE_VALIDATE_FAIL = 11; // 交易验证失败

     PHONE_CAPTCHA_ERROR = 12; // 手机验证码错误

     PHONE_NOT_REGISTER = 13; // 手机号未注册

     USER_IS_FREEZE = 14; // 用户已冻结

     GRUSER_MORE = 15; // 已存在个人用户

     ALREADY_COLLECTED = 16; // already collect

     PHONE_IS_REGISTER = 17; // 该手机号已经注册过

     EMAIL_IS_BIND = 18; // 邮箱已经绑定其他账户
}

message GrpcError {
    ErrorMessage error_message = 1;
}

message ErrorMessage {
    ErrorCode error_code = 1;
    string error_reason = 2;
    string error_description = 3;
}